--- a/WatchList/app/build.gradle
+++ b/WatchList/app/build.gradle
@@ -27,5 +27,16 @@ dependencies {
     compile 'com.android.support:appcompat-v7:25.3.1'
     compile 'com.android.support:design:25.3.1'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
+    // https://mvnrepository.com/artifact/com.google.code.gson/gson
+    compile group: 'com.google.code.gson', name: 'gson', version: '2.3.1'
+    compile 'com.squareup.retrofit2:retrofit:2.1.0'
+    // https://mvnrepository.com/artifact/com.squareup.retrofit2/converter-gson
+    compile group: 'com.squareup.retrofit2', name: 'converter-gson', version: '2.0.0-beta3'
+    // https://mvnrepository.com/artifact/com.squareup.retrofit2/adapter-guava
+    compile group: 'com.squareup.retrofit2', name: 'adapter-guava', version: '2.0.1'
+    // https://mvnrepository.com/artifact/com.squareup.picasso/picasso
+    compile group: 'com.squareup.picasso', name: 'picasso', version: '2.5.2'
+
     testCompile 'junit:junit:4.12'
+    compile 'javax.annotation:javax.annotation-api:1.2'
 }
