--- a/WatchList/app/src/main/AndroidManifest.xml
+++ b/WatchList/app/src/main/AndroidManifest.xml
@@ -2,6 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.a11502064.watchlist">
 
+    <uses-permission android:name="android.permission.INTERNET" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -18,7 +20,8 @@
             </intent-filter>
         </activity>
         <activity android:name=".activities.WatchedListActivity" />
-        <activity android:name=".activities.WatchListActivity"></activity>
+        <activity android:name=".activities.WatchListActivity" />
+        <activity android:name=".activities.MovieDetailsActivity" />
     </application>
 
 </manifest>
