--- a/WatchList/app/build.gradle
+++ b/WatchList/app/build.gradle
@@ -6,16 +6,25 @@ android {
     defaultConfig {
         applicationId "com.example.a11502064.watchlist"
         minSdkVersion 15
-        targetSdkVersion 25
+        targetSdkVersion 0
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+        jackOptions {
+            enabled true
+        }
     }
     buildTypes {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
+    }
+    compileOptions {
+        targetCompatibility 1.8
+        sourceCompatibility 1.8
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
     }
 }
 
