--- a/WatchList/app/build.gradle
+++ b/WatchList/app/build.gradle
@@ -29,7 +29,7 @@ dependencies {
     // https://mvnrepository.com/artifact/com.squareup.retrofit2/adapter-guava
     // https://mvnrepository.com/artifact/com.squareup.picasso/picasso
     compile files('libs/YouTubeAndroidPlayerApi.jar')
-    compile 'com.google.code.gson:gson:2.3.1'
+    compile 'com.google.code.gson:gson:2.7'
     compile 'com.squareup.retrofit2:converter-gson:2.0.0-beta3'
     compile 'com.squareup.retrofit2:adapter-guava:2.0.1'
     compile 'com.squareup.picasso:picasso:2.5.2'
@@ -38,5 +38,9 @@ dependencies {
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
     compile 'com.squareup.retrofit2:retrofit:2.1.0'
     compile 'javax.annotation:javax.annotation-api:1.2'
+    compile 'com.google.firebase:firebase-database:9.6.1'
+    compile 'com.android.support.test.espresso:espresso-core:2.2.2'
     testCompile 'junit:junit:4.12'
 }
+
+apply plugin: 'com.google.gms.google-services'
