--- a/WatchList/app/build.gradle
+++ b/WatchList/app/build.gradle
@@ -26,6 +26,9 @@ dependencies {
     })
     compile files('libs/YouTubeAndroidPlayerApi.jar')
 
+
+
+
     compile 'com.android.support:appcompat-v7:26.+'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
     compile 'javax.annotation:javax.annotation-api:1.2'
@@ -34,9 +37,6 @@ dependencies {
     compile 'com.squareup.retrofit2:adapter-guava:2.0.1'
     compile 'com.squareup.picasso:picasso:2.5.2'
     compile 'com.squareup.retrofit2:retrofit:2.1.0'
-    compile 'com.android.support:recyclerview-v7:+'
-
-
+    compile 'com.android.support:recyclerview-v7:26.0.0-alpha1'
     testCompile 'junit:junit:4.12'
-
 }
