--- a/WatchList/app/build.gradle
+++ b/WatchList/app/build.gradle
@@ -35,6 +35,7 @@ dependencies {
     compile 'com.squareup.picasso:picasso:2.5.2'
     compile 'com.squareup.retrofit2:retrofit:2.1.0'
     compile 'com.android.support:recyclerview-v7:+'
+    compile 'com.google.firebase:firebase-database:9.6.1'
 
 
     testCompile 'junit:junit:4.12'
