--- a/WatchList/app/build.gradle
+++ b/WatchList/app/build.gradle
@@ -17,7 +17,21 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+    packagingOptions {
+
+        exclude 'META-INF/DEPENDENCIES'
+        exclude 'META-INF/LICENSE'
+        exclude 'META-INF/LICENSE.txt'
+        exclude 'META-INF/license.txt'
+        exclude 'META-INF/NOTICE'
+        exclude 'META-INF/NOTICE.txt'
+        exclude 'META-INF/notice.txt'
+        exclude 'META-INF/ASL2.0'
+
+    }
 }
+
+
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
@@ -37,13 +51,9 @@ dependencies {
     compile 'com.squareup.retrofit2:adapter-guava:2.0.1'
     compile 'com.squareup.picasso:picasso:2.5.2'
     compile 'com.squareup.retrofit2:retrofit:2.1.0'
-<<<<<<< HEAD
     compile 'com.android.support:recyclerview-v7:+'
-    compile 'com.google.firebase:firebase-database:9.6.1'
-
-
-=======
+    //compile 'com.google.firebase:firebase-database:9.6.1'
     compile 'com.android.support:recyclerview-v7:26.0.0-alpha1'
->>>>>>> 1ae52683b1b7f1d613fdd09aa399cf5d1b1e0730
+    compile 'com.firebase:firebase-client-android:2.5.2'
     testCompile 'junit:junit:4.12'
 }
