--- a/WatchList/app/src/main/AndroidManifest.xml
+++ b/WatchList/app/src/main/AndroidManifest.xml
@@ -3,6 +3,7 @@
     package="pxl.be.watchlist">
 
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 
     <application
         android:name=".databaaaz.MyApplication"
