--- a/WatchList/app/build.gradle
+++ b/WatchList/app/build.gradle
@@ -33,10 +33,10 @@ dependencies {
     compile 'javax.annotation:javax.annotation-api:1.2'
     compile 'com.google.code.gson:gson:2.7'
     compile 'com.squareup.retrofit2:converter-gson:2.0.0-beta3'
-    compile 'com.squareup.retrofit2:adapter-guava:2.0.1'
+    //compile 'com.squareup.retrofit2:adapter-guava:2.0.1'
     compile 'com.squareup.picasso:picasso:2.5.2'
     compile 'com.squareup.retrofit2:retrofit:2.1.0'
-    compile 'com.android.support:recyclerview-v7:26.0.0-alpha1'
+    //compile 'com.android.support:recyclerview-v7:26.0.0-alpha1'
     compile "com.github.Raizlabs.DBFlow:dbflow-core:${dbflow_version}"
     compile "com.github.Raizlabs.DBFlow:dbflow:${dbflow_version}"
 
